Fix whitespace gap on mobile due to desktop sticky header offset

--- a/great-western-wine-theme/assets/scss/layouts/body/_body.scss
+++ b/great-western-wine-theme/assets/scss/layouts/body/_body.scss
@@ -10,7 +10,11 @@
 
 .body {
     margin-bottom: spacing("double");
-    margin-top: 121px;
+    margin-top: 0;
+
+    @include breakpoint("medium") {
+        margin-top: 121px;
+    }
 }
 
 .page {
